# create_autonomy

./: README.md
ca_bringup/launch/: complete.launch  minimal.launch
ca_bringup/scripts/: create_udev_rules.sh  delete_udev_rules.sh  rplidar.rules
ca_description/urdf/sensors/lasers/: rplidar.xacro
ca_description/urdf/stacks/: turtlebot.xacro
ca_driver/config/: default.yaml
ca_node/launch/: create_2.launch
ca_tools/rviz/: localization.rviz  navigation.rviz  octomap.rviz
docker/: docker_utils.py  run
navigation/ca_localization/config/: ekf_imu.yaml  ekf_localization.yaml  ekf_odom.yaml
navigation/ca_localization/launch/: localize.launch
navigation/ca_move_base/maps/: map.pgm  map.yaml  restaurant.yaml
robot_servicio/: CMakeLists.txt  execute.sh  execute_gui.sh  execute_mapping.sh  package.xml
robot_servicio/config/: table_positions.yaml
robot_servicio/launch/: ejecutable.launch
robot_servicio/scripts/: move.py  scanf.py  send_goals.py
sensors/ca_camera/config/: rplidar.yaml
sensors/ca_camera/launch/: rplidar_a2.launch
